--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Wix"
-      content="Wix Front-End position test"
+      name="React App"
+      content="React App"
     />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="icon" sizes="192x192" href="https://www.wix.com/favicon.ico">
-    <link rel="shortcut icon" href="https://www.wix.com/favicon.ico" type="image/x-icon"/>
-    <link rel="apple-touch-icon" href="https://www.wix.com/favicon.ico" type="image/x-icon"/>
-
-    <title>Wix - FE test</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
